--- a/views/shop/product.hbs
+++ b/views/shop/product.hbs
@@ -223,14 +223,14 @@
                 <div id="white-background">
                 </div>
                 <div id="dlgbox">
-                    <div id="dlg-header">Your Book is Added to Cart</div>
+                    <div id="dlg-header">Item added to cart!</div>
                     <div id="dlg-body">Sorry for inconvenience we are working on it</div>
                     <div id="dlg-footer">
                         <button onclick="dlgLogin()">Go Back</button>
                     </div>
                 </div>
                 <div class="section" style="padding-left:-40px;">
-                <a class="btn btn-success pull-left" role="button" onclick="showDialog()">Add to Shopping Cart</a>
+                <a class="btn btn-outline-success pull-left" role="button" onclick="showDialog()">Add to Shopping Cart</a>
                 </div>
                 <script>
                     function dlgLogin(){
