--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,55 +1,38 @@
-<html>
-<title>W3.CSS Template </title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-    body {font-family: "Lato", sans-serif}
-    .mySlides {display: none}
-    html{
-        position: relative;
-        min-width: 1024px;
-        min-height: 768px;
-        height: 100%;
-        top:10px;
-    }
-    input[type=text] {
-        color: #333333;
-        width: 200px;
-        box-sizing: border-box;
-        border: 2px solid #ccc;
-        border-radius: 8px;
-        font-size: 16px;
-        background-color: white;
-        background-image: url('https://d2zjg0qo565n2.cloudfront.net/sites/default/files/2016-rebrand/header-icons/Homepage_Search_Icon.png');
-        background-position: 8px 8px;
-        background-repeat: no-repeat;
-        padding: 8px 16px 8px 32px;
-        -webkit-transition: width 1s ease-in-out;
-        transition: width 1s ease-in-out;
-        padding-top: 10px;
-    }
 
-</style>
-<body>
+  <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="/">the <i class="fas fa-tv"></i> store</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-
-
-
-
-<div class="w3-top">
-    <div class="w3-bar w3-black w3-card">
-        <a class="w3-bar-item w3-button w3-padding-medium w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-        <a href="/" class="w3-bar-item w3-button w3-padding-large"><b>the-TV-store</b></a>
-        <a href="/aboutus" class="w3-bar-item w3-button w3-padding-large w3-hide-small">A</a>
-        <a href="/contactus" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT US</a>
-
-        <form method="get" action="/search" class="search">
-            <input maxlength="2048" id="searchBox" size="30" type="text"
-                   placeholder="Find Your Book" title="Search" value="" lang="en" name="query" style="height: 35px; " />
-            <button type="submit" class="btn btn-default" style="height: 30px">Search</button>
-        </form>
-    </div>
-</div>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="/aboutus">Meet the Team!</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/contactus">Reach out!</a>
+      </li>
+    </ul>
+    <ul class="navbar-nav mr-right">
+    <form class="search" method="get" action="/search">
+      <input maxlength="2048" id="searchBox" size="30" type="text"
+      placeholder="Search here!" title="Search" value="" lang="en" name="query" style="height: 35px; " />
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Look up!</i></button>
+    </form>
+    <li class="nav-item">
+      <a class="nav-link" href="#">My <i class="fas fa-shopping-cart"></i>!</a>
+    </li>
+    <li class="nav-item dropdown">
+       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+         Hey <i class="fas fa-user-tie"></i> !
+       </a>
+       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+         <a class="dropdown-item" href="#"> Sign In/Up!</a>
+         <a class="dropdown-item" href="#">Another action</a>
+         <div class="dropdown-divider"></div>
+         <a class="dropdown-item" href="#">Logout!</a>
+       </div>
+    </ul>
+  </div>
+</nav>
