--- a/views/shop/search.hbs
+++ b/views/shop/search.hbs
@@ -38,7 +38,7 @@
         }
 
         #dlg-header{
-            background-color: #7f7f7f;
+            background-color: #003366;
             color: white;
             font-size: 20px;
             padding: 10px;
@@ -46,7 +46,7 @@
         }
 
         #dlg-body{
-            background-color: white;
+            background-color: #6897bb;
             color: black;
             font-size: 14px;
             padding: 10px;
@@ -54,7 +54,7 @@
         }
 
         #dlg-footer{
-            background-color: #f2f2f2;
+            background-color: #3b5998;
             text-align: right;
             padding: 10px;
             margin: 0px 10px 10px 10px;
