--- a/views/user/signin.hbs
+++ b/views/user/signin.hbs
@@ -43,12 +43,13 @@
         {{/if}}
         <form action="/user/signin" method="post">
             <div class="form-group"><br><br>
-                <label for="email"><h2>E-mail:</h2></label>
-                <input type="text" id="email" name="email" class="form-control">
+              <label for="email"><h2>E-mail address:</h2</label>
+                <input type="text" id="email" name="email" class="form-control" placeholder="name@example.com">
+                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
             </div>
             <div class="form-group">
                 <label for="password"><h2>Password:</h2></label>
-                <input type="password" id="password" name="password" class="form-control">
+                <input type="password" id="password" name="password" class="form-control" placeholder="Password">
             </div>
             <input type="hidden" name="_csrf" value="{{ csrfToken }}">
             <button type="submit" class="btn btn-primary">Sign In</button>
