--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -83,6 +83,163 @@
 <br>
 <br>
 <header>
+  <h1 style=align="center"><b>Trending products!</b></h1>
+</header>
+<br>
+
+<div class="row">
+    <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+<!--            <a href="/loadProduct?_id={{this._id}}">-->
+                <img src="https://images-na.ssl-images-amazon.com/images/I/61eTBqoXxaL.jpg" alt="..." class="img-responsive">
+                <h3 style="font-size: 20px">TCL 55S517 55-Inch 4K Ultra HD Roku Smart LED TV (2018 Model)</h3>
+            </a>
+            <div class="caption">
+
+                <div class="clearfix">
+                  <div class="price pull-left" style="font-size: 18px"><b>Item Price: $429.0</b></div>
+                    <body>
+                    <div id="white-background">
+                    </div>
+                    <div id="dlgbox">
+                        <div id="dlg-header" >Success!!</div>
+                        <div id="dlg-body">Item added to cart!</div>
+                        <div id="dlg-footer">
+                            <button type="button" class="btn btn-dark" > OK! </button>
+                        </div>
+                    </div>
+                    <a href="/add-to-cart/{{this._id}}" style="font-size: 18px" class="btn btn-outline-success pull-right" role="button" onclick="showDialog()">Move to cart!</a>
+
+                    <script>
+                        function dlgLogin(){
+                            var whitebg = document.getElementById("white-background");
+                            var dlg = document.getElementById("dlgbox");
+                            whitebg.style.display = "none";
+                            dlg.style.display = "none";
+                        }
+                        function showDialog(){
+                            var whitebg = document.getElementById("white-background");
+                            var dlg = document.getElementById("dlgbox");
+                            whitebg.style.display = "block";
+                            dlg.style.display = "block";
+                            var winWidth = window.innerWidth;
+                            var winHeight = window.innerHeight;
+                            dlg.style.left = (winWidth/2) - 480/2 + "px";
+                            dlg.style.top = "150px";
+                        }
+                    </script>
+
+                    </body>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+            <!--            <a href="/loadProduct?_id={{this._id}}">-->
+            <img src="https://images-na.ssl-images-amazon.com/images/I/919KyC%2BxrIL.jpg" alt="..." class="img-responsive">
+            <h3 style="font-size: 20px">LG Electronics OLED65C7P 65-Inch 4K Ultra HD Smart OLED TV (2017 Model)</h3>
+            </a>
+            <div class="caption">
+
+
+                <div class="clearfix">
+                  <div class="price pull-left" style="font-size: 18px"><b>Item Price: $747.0</b></div>
+                    <body>
+                    <div id="white-background">
+                    </div>
+                    <div id="dlgbox">
+                        <div id="dlg-header" >Success!!</div>
+                        <div id="dlg-body">Item added to cart!</div>
+                        <div id="dlg-footer">
+                            <button type="button" class="btn btn-dark" > OK! </button>
+                        </div>
+                    </div>
+
+                    <a href="/add-to-cart/{{this._id}}" style="font-size: 18px" class="btn btn-outline-success pull-right" role="button" onclick="showDialog()">Move to cart!</a>
+                    <script>
+                        function dlgLogin(){
+                            var whitebg = document.getElementById("white-background");
+                            var dlg = document.getElementById("dlgbox");
+                            whitebg.style.display = "none";
+                            dlg.style.display = "none";
+                        }
+                        function showDialog(){
+                            var whitebg = document.getElementById("white-background");
+                            var dlg = document.getElementById("dlgbox");
+                            whitebg.style.display = "block";
+                            dlg.style.display = "block";
+                            var winWidth = window.innerWidth;
+                            var winHeight = window.innerHeight;
+                            dlg.style.left = (winWidth/2) - 480/2 + "px";
+                            dlg.style.top = "150px";
+                        }
+                    </script>
+
+                    </body>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+            <!--            <a href="/loadProduct?_id={{this._id}}">-->
+            <img src="https://images-na.ssl-images-amazon.com/images/I/A1I7u42J4uL.jpg" alt="..." class="img-responsive">
+            <h3 style="font-size: 20px">Samsung Electronics UN65MU7500 Curved 65-Inch 4K Ultra HD Smart LED TV (2017 Model)</h3>
+            </a>
+            <div class="caption">
+
+
+                <div class="clearfix">
+                  <div class="price pull-left" style="font-size: 18px"><b>Item Price: $548.0</b></div>
+                    <body>
+                    <div id="white-background">
+                    </div>
+                    <div id="dlgbox">
+                        <div id="dlg-header" >Success!!</div>
+                        <div id="dlg-body">Item added to cart!</div>
+                        <div id="dlg-footer">
+                            <button type="button" class="btn btn-dark" > OK! </button>
+                        </div>
+                    </div>
+                    <a href="/add-to-cart/{{this._id}}" style="font-size: 18px" class="btn btn-outline-success pull-right" role="button" onclick="showDialog()">Move to cart!</a>
+                    <script>
+                        function dlgLogin(){
+                            var whitebg = document.getElementById("white-background");
+                            var dlg = document.getElementById("dlgbox");
+                            whitebg.style.display = "none";
+                            dlg.style.display = "none";
+                        }
+                        function showDialog(){
+                            var whitebg = document.getElementById("white-background");
+                            var dlg = document.getElementById("dlgbox");
+                            whitebg.style.display = "block";
+                            dlg.style.display = "block";
+                            var winWidth = window.innerWidth;
+                            var winHeight = window.innerHeight;
+                            dlg.style.left = (winWidth/2) - 480/2 + "px";
+                            dlg.style.top = "150px";
+                        }
+                    </script>
+
+                    </body>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<br>
+<br>
+<header>
   <h1 style=align="center"><b>Find our best products here!</b></h1>
 </header>
 <br>
